# atm-management-system

./: .gitignore  Makefile.in  configure.ac
src/: database.c  database.h  helper.c  helper.h  main.c  menu.c  menu.h
